Fix icon align and help text

--- a/octoprint_toptemp/static/css/TopTemp.css
+++ b/octoprint_toptemp/static/css/TopTemp.css
@@ -231,4 +231,8 @@ body.TopTemPreviewON div#settings_dialog {
     color: #333;
 }
 
+#navbar_plugin_toptemp > div:not(.IconsLeft) .navbar-text{
+    line-height: 15px;
+}
+
 /* TopTemp END */
